--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "1.3.0",
+    "nodemon": "^1.19.1",
     "prettier": "1.16.4"
   }
 }
