--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "os": "^0.1.1",
     "restify": "^8.3.3",
     "restify-cors-middleware": "^1.1.1",
-    "restify-router": "^0.5.1"
+    "restify-router": "^0.5.1",
+    "signale": "^1.4.0"
   },
   "devDependencies": {
     "babel-eslint": "9.0.0",
