--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.4.4",
+    "aws-sdk": "^2.480.0",
     "dotenv": "^8.0.0",
     "os": "^0.1.1",
     "restify": "^8.3.3",
