--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "module to control ffmpeg ",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js",
+    "start": "babel-node index.js",
+    "dev": "nodemon --exec babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
