Add build command

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "module to control ffmpeg ",
   "main": "app.js",
   "scripts": {
-    "start": "babel-node index.js",
+    "build": "babel index.js --out-dir dist",
     "dev": "nodemon --exec babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
